Fix CSS aligns and positions. Also imgs and fonts

--- a/style.css
+++ b/style.css
@@ -2,25 +2,47 @@ body {
     display: grid;
     grid-template-columns: 0.5fr 3fr;
     grid-template-rows: 1fr 4fr;
+    margin: 0;
+    font-family: Roboto, Arial, sans-serif;
 }
 
 .sidebar {
-    background-color: lightskyblue;
+    background-color: #1992d4;
+    padding: 2rem;
 }
 
 .content {
-    background-color: lightgray;
+    background-color: #e2e8f0;
 
 }
 
 .logo {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.1fr 0.1fr;
+    justify-content: center;
+    gap: 1rem;
+    color: white;
+}
+
+.logo>img {
+    align-self: center;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(152deg) brightness(117%) contrast(114%);
 }
 
 .nav-item {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr) 3fr;
+    color: white;
+    justify-self: center;
+    gap: 2rem;
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
+.nav-item>img {
+    width: 2rem;
+    align-self: center;
+    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(152deg) brightness(117%) contrast(114%);
 }
 
 .nav-about {
@@ -30,30 +52,77 @@ body {
 .header-top {
     display: grid;
     grid-template-columns: 3fr 1fr;
+    margin-top: 1rem;
+    margin-left: 2rem;
 }
 
 .search {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 0.07fr 0.8fr;
+}
+
+.search>img {
+    align-self: center;
+}
+
+.search>input {
+    height: 2rem;
+    align-self: center;
 }
 
 .user-info {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 0.1fr 0.1fr max-content;
+    gap: 2rem;
+    justify-content: end;
+    margin-right: 2rem;
+}
+
+.user-info>p {
+    font-weight: bold;
+}
+
+.bell {
+    width: 2rem;
+    align-self: center;
 }
 
 .header-bottom {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr min-content;
+    margin-top: 1rem;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
 }
 
 .greetings {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.1fr 1fr;
+    gap: 10px;
 }
 
 .greetings-img {
     grid-row-start: 1 3;
+    align-self: center;
+}
+
+.greetings-info p {
+    line-height: 0.3;
+}
+
+.header-buttons {
+    justify-self: end;
+    align-self: center;
+}
+
+.header-buttons>button {
+    font-size: 1.5rem;
+    margin: 0 2rem;
+    padding: 0.5rem 1rem;
+    background-color: #1992d4;
+    border-radius: 25px;
+    color: white;
+    border: none;
 }
 
 .content {
@@ -65,19 +134,35 @@ body {
 .projects {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.25fr 1fr 1fr 1fr;
-    gap: 2rem;
+    grid-template-rows: 0.1fr 3fr 3fr 3fr;
+    gap: rem;
+
 }
 
 .projects-header {
     grid-column-start: 1;
     grid-column-end: 3;
+    margin-bottom: 0;
+    margin-left: 1rem;
 }
 
 .project-card {
     background-color: white;
     border-radius: 5px;
-    border-left: 5px solid orange;
+    border-left: 5px solid #f0b429;
+    margin: 0 1rem 1rem 1rem;
+    padding: 1rem;
+    box-shadow: 1px 1px 5px black;
+}
+
+.card-icons {
+    display: flex;
+    justify-content: end;
+}
+
+.card-icons>img {
+    width: 2rem;
+    padding: 0.5rem;
 }
 
 .content-right {
@@ -88,33 +173,54 @@ body {
 
 .announcements {
     display: grid;
-    grid-template-rows: 0.25fr 1fr;
+    grid-template-rows: 0.1fr 1fr;
+}
+
+.announcements>h2 {
+    margin-bottom: 0;
 }
 
 .announce-card {
     background-color: white;
     border-radius: 5px;
+    margin-right: 1rem;
+    padding: 1rem;
+    box-shadow: 1px 1px 5px black;
 }
 
 .trending {
     display: grid;
-    grid-template-rows: 0.25fr 1fr;
+    grid-template-rows: 0.1fr 1fr;
+}
+
+.trending>h2 {
+    margin-bottom: 0;
 }
 
 .trending-card {
     background-color: white;
     border-radius: 5px;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    box-shadow: 1px 1px 5px black;
 }
 
 .trend {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 3rem 10rem;
+    justify-self: center;
 }
 
 .trend>img {
     grid-row-start: 1;
     grid-row-end: 3;
+    align-self: center;
+}
+
+.trend>p {
+    justify-self: start;
+    margin-left: 1rem;
 }
 
 img {
